se termino la pantalla de crear cuenta, quedo bien

--- a/My-account.html
+++ b/My-account.html
@@ -12,7 +12,7 @@
 <body>
     <div class="login">
         <div class="form-container">
-        <h1 class="title">Create a new password</h1>
+        <h1 class="title">My account</h1>
         
             <form action="" class="form">
                 <div>
