se creo el inicio, se estilizaron las imagenes, logos, textos y sus respectivos tamaños.

--- a/Inicio.html
+++ b/Inicio.html
@@ -12,156 +12,221 @@
 <body>
     <section class="main-container">
         <div class="cards-container">
+           
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="/Iconos/bt_add_to_cart.svg" alt="">
-                </figure>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div> 
+                    <figure>
+                        <img src="/Iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>      
             </div>
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="/Iconos/bt_add_to_cart.svg" alt="">
-                </figure>
-            </div>
-
-            <div class="product-card">
-                <img src="https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="/Iconos/bt_add_to_cart.svg" alt="">
-                </figure>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div> 
+                    <figure>
+                        <img src="/Iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>      
             </div>
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="/Iconos/bt_add_to_cart.svg" alt="">
-                </figure>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div> 
+                    <figure>
+                        <img src="/Iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>      
             </div>
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="/Iconos/bt_add_to_cart.svg" alt="">
-                </figure>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div> 
+                    <figure>
+                        <img src="/Iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>      
             </div>
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="/Iconos/bt_add_to_cart.svg" alt="">
-                </figure>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div> 
+                    <figure>
+                        <img src="/Iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>      
             </div>
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="/Iconos/bt_add_to_cart.svg" alt="">
-                </figure>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div> 
+                    <figure>
+                        <img src="/Iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>      
             </div>
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="/Iconos/bt_add_to_cart.svg" alt="">
-                </figure>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div> 
+                    <figure>
+                        <img src="/Iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>      
             </div>
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="/Iconos/bt_add_to_cart.svg" alt="">
-                </figure>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div> 
+                    <figure>
+                        <img src="/Iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>      
             </div>
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="/Iconos/bt_add_to_cart.svg" alt="">
-                </figure>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div> 
+                    <figure>
+                        <img src="/Iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>      
             </div>
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="/Iconos/bt_add_to_cart.svg" alt="">
-                </figure>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div> 
+                    <figure>
+                        <img src="/Iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>      
+            </div> <div class="product-card">
+                <img src="https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div> 
+                    <figure>
+                        <img src="/Iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>      
             </div>
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="/Iconos/bt_add_to_cart.svg" alt="">
-                </figure>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div> 
+                    <figure>
+                        <img src="/Iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>      
             </div>
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="/Iconos/bt_add_to_cart.svg" alt="">
-                </figure>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div> 
+                    <figure>
+                        <img src="/Iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>      
             </div>
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="/Iconos/bt_add_to_cart.svg" alt="">
-                </figure>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div> 
+                    <figure>
+                        <img src="/Iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>      
             </div>
             <div class="product-card">
                 <img src="https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
-                <div>
-                    <p>$120,00</p>
-                    <p>Bike</p>
-                </div>
-                <figure>
-                    <img src="/Iconos/bt_add_to_cart.svg" alt="">
-                </figure>
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div> 
+                    <figure>
+                        <img src="/Iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>      
+            </div>
+            <div class="product-card">
+                <img src="https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div> 
+                    <figure>
+                        <img src="/Iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>      
+            </div>
+            <div class="product-card">
+                <img src="https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div> 
+                    <figure>
+                        <img src="/Iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>      
+            </div>
+            <div class="product-card">
+                <img src="https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=800" alt="">
+                <div class="product-info">
+                    <div>
+                        <p>$120,00</p>
+                        <p>Bike</p>
+                    </div> 
+                    <figure>
+                        <img src="/Iconos/bt_add_to_cart.svg" alt="">
+                    </figure>
+                </div>      
             </div>
         </div>
     </section>
